...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/baseline_local_cafe_24"
        android:padding="10dp"/>

    <ImageButton
        android:id="@+id/maps_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_map_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
